hphp/hack/test/typecheck/supertype_shape_must_include_optional_fields_in_subtype_shape.php.exp
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 4, characters 10-33:
Invalid return type (Typing[4110])
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 3, characters 64-70:
Expected nothing because the field 'a' is not defined in this shape type, and this shape type does not allow unknown fields
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 3, characters 29-34:
But got string
